update (+ api_key placeholder, .env)